force-app/main/default/objects/Property__c/fields/AI_Generated_Avg_Rating__c.field-meta.xml
<CustomField>
    <fullName>AI_Generated_Avg_Rating__c</fullName>
    <description>Average rating for property feedback.</description>
    <label>AI Generated Avg Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>