force-app/main/default/objects/Property__c/fields/AI_Generated_Feedback_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>AI_Generated_Feedback_Sentiment__c</fullName>
    <description>Feedback sentiment generated by AI based on customer feedback.</description>
    <inlineHelpText>Feedback sentiment generated by AI based on customer feedback.</inlineHelpText>
    <label>AI Generated Feedback Sentiment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>