force-app/main/default/objects/Property__c/fields/AI_Generated_Feedback_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Generated_Feedback_Summary__c</fullName>
    <description>Feedback Summary provided by the Generative AI Gateway.</description>
    <inlineHelpText>Feedback Summary provided by the Generative AI Gateway.</inlineHelpText>
    <label>AI Generated Feedback Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>