force-app/main/default/objects/Property__c/fields/AI_Generated_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>AI_Generated_Recommendation__c</fullName>
    <description>Recommendation generated by AI based on customer feedback provided.</description>
    <inlineHelpText>Recommendation generated by AI based on customer feedback provided.</inlineHelpText>
    <label>AI Generated Recommendation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>